// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VestTest TestObject constructor 1`] = `
VestTest {
  "fieldName": "unicycle",
  "id": "0",
  "message": "I am Root.",
  "status": "UNTESTED",
  "testFn": [MockFunction],
  "warns": false,
}
`;

exports[`VestTest testObject.warn Should set \`.warns\` to true 1`] = `
VestTest {
  "fieldName": "unicycle",
  "id": "102",
  "message": "I am Root.",
  "status": "UNTESTED",
  "testFn": [MockFunction],
  "warns": true,
}
`;
